StringTag ESCAPE_CHARACTERS map optimization